[package]
name = "morse-lib"
description = "Library for coding/decoding Morse Code with multilanguage support"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/NazarK0/morse-lib"
homepage = "https://github.com/NazarK0/morse-lib"
keywords = ["morse", "parser", "encoder"]
categories = ["encoding", "parsing"]

[dependencies]
rodio = "0.19.0"
